--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,5 @@ coverage
 
 *.tsbuildinfo
 
-# wrangler files
-.wrangler
-.dev.vars*
-!.dev.vars.example
-.env*
-!.env.example
+test-results/
+playwright-report/
